<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:gravity="center_horizontal" android:background="#ffffff"
    android:orientation="vertical" android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:backgroundTint="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled= "true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/Hint"
            android:textColorHint="@color/colorWhiteDarck">
            <EditText
                android:id="@+id/route_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:inputType="textEmailAddress"
                android:hint="@string/title_rute"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/des_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled= "true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/Hint"
            android:textColorHint="@color/colorWhiteDarck">
            <EditText
                android:id="@+id/route_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:inputType="textEmailAddress"
                android:hint="@string/description_route"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/button_ok"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/ok"
            android:background="@color/colorAccent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textColor="@color/colorWhiteDarck"/>
    </LinearLayout>
</LinearLayout>