<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="es.fingercode.racehub.mapsroute.activity.LoginActivity"
    tools:showIn="@layout/activity_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acces_string"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <LinearLayout
            android:id="@+id/area_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled= "true"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/Hint"
                android:textColorHint="@color/colorWhiteDarck"
                app:errorTextAppearance="@style/Error">
                <EditText
                    android:id="@+id/edittext_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:inputType="textEmailAddress"
                    android:hint="@string/user_string"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/area_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_pass"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled= "true"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/Hint"
                android:textColorHint="@color/colorWhiteDarck"
                app:errorTextAppearance="@style/Error">
                <EditText
                    android:id="@+id/edittext_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:hint="@string/pass_string"
                    android:inputType="text"
                    android:textColorHint="@color/colorWhiteDarck"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>